Overflows solved

--- a/website/web/css/styles_nf.css
+++ b/website/web/css/styles_nf.css
@@ -149,7 +149,7 @@ body {
     font-weight: 300;
     background: url("../img/city_bg.png") repeat center;
     color: #F56634;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 a {
